# ML1-Master-S1

./: .gitignore  README.md
labs/lab_1/: svm_diabetes.ipynb  svm_mnist.ipynb
labs/lab_2/: rf_diabetes.ipynb  rf_titanic.ipynb
labs/lab_3/: retropropagation.ipynb  retropropagation_main.ipynb
labs/lab_4/: feedforwardnn_mnist.ipynb  feedforwardnn_mnist_main.ipynb
labs/lab_5/: EM_iris.ipynb
labs/lab_6/: rl.ipynb
tutorials/tutorial_1/: main.ipynb  pyproject.toml  requirements.txt
tutorials/tutorial_2/: main.ipynb  solution.ipynb
tutorials/tutorial_3/: main.ipynb  solution.ipynb
tutorials/tutorial_4/: main.ipynb  requirements.txt  solution.ipynb  solution_ex3.ipynb
tutorials/tutorial_5/: solution.ipynb
tutorials/tutorial_6/: em.ipynb  requirements.txt
